= Version History =

x.x:

- changed: CSS cleanup

2.4 (2013-04-05):

- added: publication and expiration date on blogs (cron based)
- changed: cleaned up blog/save action
- changed: requirements for plugin to Elgg 1.8.9
- fixed: security issue in blog tools save form

2.3 (2012-07-31):

- added: widget title links for blog widget
- added: index_blog widget simple mode
- added: alt tag on blog image (at the request of ghumanz http://community.elgg.org/profile/harinderghumanz)
- fixed: incorrect context in index_blog widget
- fixed: blog widget more link in widget
- fixed: deprecated notices in combination with widget_manager
- fixed: crash (WSOD) while removing blog icon (#7)
- fixed: PHP warnings and notices
- fixed: wrong link in blog widget when used in groups
- fixed: depricated notice in blog save action
- fixed: index_blog widget slider mode
- fixed: index_blog widget preview mode
- fixed: index_blog widget showing unpublished blogs
- fixed: blog widget showing unpublished blogs

2.2 (2012-03-02):

- added: dutch translation
- fixed: depricated notice with widget_manager
- fixed: depricated notice on blog save form (thanks to ZigZag http://community.elgg.org/pg/profile/zigzag)
- fixed: categories no displaying the same as in core
- fixed: image align issue in full view
- changed: language file cleanup, use more core language keys
- changed: icon upload / remove handling
- changed: legacy Elgg 1.7 page_handlers overrule to use Elgg 1.8 route hook

2.1.2 (2012-01-23):

- fixed: blog listing not showing description on older blogs (#6) (again)

2.1.1 (2012-01-18):

- fixed: blog title showing twice (#5)
- fixed: blog listing not showing description on older blogs (#6)
- fixed: breadcrumb issue on bloag add/edit
- changed: updated required Elgg version to 1.8.3

2.1 (2011-12-05):

- added: advanced gatekeeper, to more easily allow user to access blogs

2.0.1 (2011-11-28):

- fixed: page_handler issue with Elgg 1.8.1

2.0 (2011-11-18):
